--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,6 @@
   transform: translate(-50%, -50%);
   text-align: center;
   color: rgb(9, 9, 144);
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
